# ConceptCore

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  BuildAll.sh  CCL-Full.sln  Dockerfile  NuGet.Config  README.md  TODO.txt  docker-compose.yml  entrypoint.sh
ccl/: CMakeLists.txt
ccl/cclCommons/: CMakeLists.txt
ccl/cclCommons/test/: CMakeLists.txt  cclCommonsTest.vcxproj
ccl/cclGraph/: CMakeLists.txt  cclGraph.vcxproj  cclGraph.vcxproj.filters
ccl/cclGraph/src/: CGraph.cpp
ccl/cclGraph/test/: CMakeLists.txt  cclGraphTest.vcxproj
ccl/cclLang/: CMakeLists.txt  cclLang.vcxproj  cclLang.vcxproj.filters
ccl/cclLang/src/: LexicalTerm.cpp  Literals.cpp  ManagedText.cpp  Morphology.cpp  Reference.cpp  RefsManager.cpp  TextEnvironment.cpp  TextProcessor.cpp
ccl/cclLang/test/: CMakeLists.txt  cclLangTest.vcxproj
ccl/cclLang/unity/: cclLang.cpp
ccl/cmake/: CXXTargets.cmake
ccl/core/: ConceptLibrary.vcxproj  ConceptLibrary.vcxproj.filters
ccl/core/src/: JSON.cpp
ccl/core/test/: !Testing aspects.txt  CMakeLists.txt  cclTest.vcxproj  cclTest.vcxproj.filters
ccl/core/unity/: CCL.cpp
ccl/rslang/: CMakeLists.txt  RSlang.vcxproj  RSlang.vcxproj.filters  RSlang_generate.vcxproj
ccl/rslang/header/: ASTNormalizer.h  AsciiLexerImpl.hpp  GeneratorImplAST.h  MathLexerImpl.hpp  NameCollector.h  RSParserImpl.h  SDImplementation.h
ccl/rslang/src/: ASTInterpreter.cpp  ASTNormalizer.cpp  AsciiLexer.cpp  AsciiLexerImpl.l  Auditor.cpp  ErrorLogger.cpp  GeneratorImplAST.cpp  Interpreter.cpp  Literals.cpp  MathLexer.cpp  MathLexerImpl.l  NameCollector.cpp  Parser.cpp  RSExpr.cpp  RSGenerator.cpp  RSParser.cpp  RSParserImpl.cpp  RSParserImpl.y  RSToken.cpp  SDImplementation.cpp  SDataCompact.cpp  StructuredData.cpp  SyntaxTree.cpp  TypeAuditor.cpp  Typification.cpp  ValueAuditor.cpp
ccl/rslang/test/: CMakeLists.txt  rslTest.vcxproj
ccl/rslang/unity/: RSlang.cpp  RSlang2.cpp  reflex_unity1.cpp  reflex_unity2.cpp
cclCommons/: CMakeLists.txt
cclCommons/cmake/: CXXTargets.cmake  conan.cmake
cclCommons/include/ccl/: Strings.hpp  Substitutes.hpp  cclChange.hpp  cclMeta.hpp  cclTypes.hpp
cclCommons/test/: CMakeLists.txt  cclCommonsTest.vcxproj  cclCommonsTest.vcxproj.filters
cclCommons/test/src/: testGuard.cpp  testObserver.cpp  testPropagateConst.cpp  testStaticMap.cpp  testStrings.cpp  testSubstitutes.cpp
cclCommons/test/utils/: FakeObserver.hpp
cclGraph/: CMakeLists.txt  cclGraph.vcxproj
cclGraph/cmake/: CXXTargets.cmake
cclGraph/include/ccl/: Entity.hpp
cclGraph/src/: CGraph.cpp
cclGraph/test/: CMakeLists.txt  cclGraphTest.vcxproj  cclGraphTest.vcxproj.filters
cclGraph/test/src/: testConnectionsGraph.cpp
cclLang/: CMakeLists.txt  cclLang.vcxproj
cclLang/cmake/: conan.cmake
cclLang/src/: LexicalTerm.cpp  Literals.cpp  ManagedText.cpp  Morphology.cpp  Reference.cpp  RefsManager.cpp  TextEnvironment.cpp  TextProcessor.cpp
cclLang/test/: CMakeLists.txt  cclLangTest.vcxproj  cclLangTest.vcxproj.filters
cclLang/test/src/: testLexicalTerm.cpp  testManagedText.cpp  testMorphology.cpp  testReference.cpp  testRefsManager.cpp  testTextProcessor.cpp
cclLang/test/unity/: cclLangTest.cpp
cclLang/test/utils/: FakeTermContext.hpp  FakeTextProcessor.hpp  MockTextProcessor.hpp  RefHelper.hpp
core/: CMakeLists.txt  ConceptLibrary.vcxproj  ConceptLibrary.vcxproj.filters  RunCoverage.bat  conanfile.txt
core/cmake/: ImportConceptTargets.cmake
core/include/ccl/: Operation.hpp  Source.hpp
core/src/: JSON.cpp
core/src/api/: RSFormJA.cpp
core/src/env/: cclEnvironment.cpp
core/src/ops/: EquationOptions.cpp  RSAggregator.cpp  RSEquationProcessor.cpp  RSOperations.cpp
core/src/oss/: OSSchema.cpp  RSSynthesProcessor.cpp  ossGraphFacet.cpp  ossGridFacet.cpp  ossOperationsFacet.cpp  ossSourceFacet.cpp
core/src/tools/: CstNameGenerator.cpp  EntityGenerator.cpp
core/test/: !Testing aspects.txt  CMakeLists.txt  cclTest.vcxproj  cclTest.vcxproj.filters
core/test/src/: testConceptRecord.cpp  testCstList.cpp  testCstNameGenerator.cpp  testCstType.cpp  testEntityGenerator.cpp  testEnvironment.cpp  testEquationOpts.cpp  testEquationProcessor.cpp  testExtractBasis.cpp  testGenerator.cpp  testIdentityManager.cpp  testInterpretationStorage.cpp  testJSON.cpp  testMaxPart.cpp  testOSS.cpp  testOSSComplex.cpp  testOSSGraphFacet.cpp  testOSSGridFacet.cpp  testOSSOpsFacet.cpp  testOSSSourceFacet.cpp  testOperation.cpp  testRSAggregator.cpp  testRSCalculationFacet.cpp  testRSConcept.cpp  testRSCore.cpp  testRSForm.cpp  testRSFormJA.cpp  testRSModel.cpp  (+11 more)
core/unity/: CCL.cpp
examples/pyconcept/: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyconcept.vcxproj  pyconcept.vcxproj.filters  pyproject.toml  requirements-build.txt  setup.cfg  setup.py
pyconcept/: .flake8  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  conanfile.txt  pyconcept.vcxproj  pyproject.toml  requirements-build.txt  requirements-dev.txt  setup.cfg  setup.py
pyconcept/cmake/: CXXTargets.cmake
pyconcept/include/: pyconcept.h
pyconcept/scripts/: Build.ps1  Build.sh  BuildSingle.ps1  Deploy.ps1
pyconcept/src/: pyconcept.cpp
pyconcept/tests/: testBinding.py
rslang/: CMakeLists.txt  RSlang.vcxproj  RSlang.vcxproj.filters  RSlang_generate.vcxproj  conanfile.txt
rslang/header/: ASTNormalizer.h  AsciiLexerImpl.hpp  GeneratorImplAST.h  MathLexerImpl.hpp  NameCollector.h  RSLexerImpl.hpp  RSParserImpl.h  SDImplementation.h
rslang/script/: build_lexers.bat
rslang/src/: ASTInterpreter.cpp  ASTNormalizer.cpp  AsciiLexer.cpp  AsciiLexerImpl.l  Auditor.cpp  ErrorLogger.cpp  GeneratorImplAST.cpp  Interpreter.cpp  Literals.cpp  MathLexer.cpp  MathLexerImpl.l  NameCollector.cpp  Parser.cpp  RSExpr.cpp  RSGenerator.cpp  RSLexer.cpp  RSLexerImpl.l  RSParser.cpp  RSParserImpl.cpp  RSParserImpl.y  RSToken.cpp  SDImplementation.cpp  SDataCompact.cpp  StructuredData.cpp  SyntaxTree.cpp  TypeAuditor.cpp  Typification.cpp  ValueAuditor.cpp
rslang/test/: CMakeLists.txt  rslTest.vcxproj  rslTest.vcxproj.filters
rslang/unity/: RSlang.cpp  RSlang2.cpp  reflex_unity1.cpp  reflex_unity2.cpp
(+346 files in other folders)
