[metadata]
name = pyconcept
version = file: VERSION
author = CIHT CONCEPT, IRBorisov
author_email = iborisov@acconcept.ru
description = Concept core Python wrapper
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: Russian
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
packages = find: