[metadata]
name = pyconcept
version = file: VERSION
author = CIHT CONCEPT, IRBorisov
author_email = iborisov@acconcept.ru
description = Concept core Python wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IRBorisov/ConceptCore/tree/main/pyconcept
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find: